--- a/GMS/src/main/webapp/gms.css
+++ b/GMS/src/main/webapp/gms.css
@@ -1,7 +1,7 @@
 
 
 
-input {
+input, select {
     width:auto;
     display:inline;
     border:1px solid #ccc;
@@ -28,3 +28,32 @@ body {
   p {
     margin: 0;
   }
+  
+ table {
+    border-collapse: collapse;
+    margin: 25px 0;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    min-width: 400px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+thead tr {
+    
+    color: #ffffff;
+    text-align: left;
+}
+
+th, td {
+    padding: 12px 15px;
+}
+
+tbody tr {
+    border-bottom: 1px solid #dddddd;
+}
+
+tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
+}
+
+
