--- a/GMS/src/main/webapp/gms.css
+++ b/GMS/src/main/webapp/gms.css
@@ -1,6 +1,3 @@
-
-
-
 input, select {
     width:auto;
     display:inline;
@@ -29,13 +26,63 @@ body {
     margin: 0;
   }
   
+ 
+ ul.nav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color:black;
+}
+
+li.nav {
+  float: left;
+}
+
+li.nav a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+}
+
+li.nav a:hover {
+  background-color: thistle;
+}
+
+ul.actions {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color:gray;
+}
+
+
+li.actions {
+  float: left;
+}
+
+li.actions a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 6px;
+  text-decoration: none;
+}
+
+li.actions a:hover {
+  background-color: thistle;
+}
+  
  table {
     border-collapse: collapse;
     margin: 25px 0;
     font-size: 0.9em;
     font-family: sans-serif;
     min-width: 400px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);    
 }
 
 thead tr {
@@ -46,6 +93,7 @@ thead tr {
 
 th, td {
     padding: 12px 15px;
+    white-space: nowrap;
 }
 
 tbody tr {
